p2/confs/app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 8080
