p2/confs/app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - name: http
    port: 80
    targetPort: 8080
