p2/confs/app3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
  - name: http
    port: 80
    targetPort: 8080
